homelab-gitops/apps/grafana/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
spec:
  selector:
    app: grafana
  ports:
    - name: http
      port: 80
      targetPort: 3000
